# ipado

./: .gitignore  README.md
di/apps/ipado3_agent/: do.sh  include.conf
di/apps/ipado3_back/: do.sh  include.conf  systemd.log.sh  systemd.service
di/apps/ipado3_front/: do.sh  include.conf
di/demo/ipado3_back/: hosts
src/rust/: Cargo.toml
src/rust/arrange_millis/: Cargo.toml
src/rust/arrange_millis/src/: lib.rs
src/rust/common_macros2/: Cargo.toml
src/rust/common_macros2/src/: declare_env_settings.rs  declare_settings.rs  lib.rs  pasitos.rs
src/rust/ipado3_agent/: .gitignore  Cargo.toml  README.md  build-for-windows.sh  run-at-localhost.sh
src/rust/ipado3_agent/src/: main.rs  opt.rs  pasitos.rs
src/rust/ipado3_agent/src/pasitos/: watcher.rs  ws.rs
src/rust/ipado3_back/: .env  .gitignore  Cargo.toml  remove.service.sh  settings.toml
src/rust/ipado3_back/src/: main.rs
src/rust/ipado3_back/src/common/: mod.rs
src/rust/ipado3_back/src/pasitos/: mod.rs
src/rust/ipado3_back/src/pasitos/spreadsheet/: mod.rs
src/rust/ipado3_back/src/server/: mod.rs
src/rust/ipado3_back/src/server/common/: error.rs  health.rs  macros.rs  mod.rs
src/rust/ipado3_back/src/server/ws/: mod.rs
src/rust/ipado3_back/src/server/ws/common/: macros.rs  mod.rs
src/rust/ipado3_common/: Cargo.toml
src/rust/ipado3_common/src/: lib.rs
src/rust/ipado3_front/: .env  .gitignore  Cargo.toml  README.md
src/rust/ipado3_front/src/: common.rs  lib.rs  route.rs
src/rust/ipado3_front/src/css/: admin.css  main.css  old.css  style-landscape.css  style-portrait.css  style.css
src/rust/ipado3_front/src/css/assets/2023-07-08/: .gitignore  convert.sh  style.css
src/rust/ipado3_front/src/html/: private_content.html  public_content.html
src/rust/ipado3_front/src/js/: auth.js  loader.js
src/rust/ipado3_front/src/render/: mod.rs
src/rust/ipado3_front/src/render/private_content/: mod.rs
src/rust/ipado3_front/src/render/private_content/header/: control_panel.rs  menu_panel.rs  mod.rs
src/rust/ipado3_front/src/render/private_content/header/user_panel/: mod.rs  user.rs
src/rust/ipado3_front/src/render/public_content/: heat.rs  mod.rs
src/rust/ipado3_front/src/render/schedule/: mod.rs
src/rust/login_export/: Cargo.toml
src/rust/login_export/src/: lib.rs
src/rust/op_mode/: Cargo.toml
src/rust/op_mode/src/: lib.rs
src/rust/spreadsheets/: Cargo.toml
src/rust/spreadsheets/src/: api.rs  cell.rs  color.rs  compact_extended_value.rs  datetime.rs  lib.rs  macros.rs  request.rs
src/rust/web_sys_utils/: Cargo.toml
src/rust/web_sys_utils/src/: lib.rs
