[workspace]
#default-members = ["api", "photo_cleaner", "wgate_rs", "yandex_feed", "ipify", "archive"]
# default-members = ["cloudpayments_back",  "wgate_rs", "yandex_feed", "ipify", "archive"]
members = [
    # "pay_back",
    # "pay2_back",
    #
    # "common_macros",
    # "common_macros2",
    # "json_uuid",
    # "json",
    # "test_helper",
    # "db_billing",
    # "metric",
    # "metric_db",
    # "s3_bucket",
    # "save_load",
    # "mime_sniff",
    # "photo_cleaner",
    # "mysql_scan",
    # "wgate_rs",
    # "mls_facet",
    # # "rusty_tarantool",
    # "yandex_feed",
    # # "spider_test",
    # "ipify",
    # "db_agate",
    # "rocket_message",
    # "estim_back",
    # "estim_tradein",
    # "estim_common",
    # # "estim_mobile",
    # "scan_ads",
    # "archive",
    # "viewboard",
    # # "rust-dominator",
    # # "dominator",
    # # "viewboard_front",
    # # "mirror_avito",
    # "mirror_avito2",
    # "mirror_avito3",
    # "mirror_domclick",
    # "scan_avito",
    # "proxy_checker",
    # "photo_url",
    # "photo3",
    # "buf_bits",
    #
    # "yookassa_back",
    # "yookassa_db",
    # "yookassa_common",
    #
    # "sales_back",
    # "sales_agate",
    # "sales_pg",
    # "sales_common",
    # "sales_asterisk",
    # "sales_billing",
    # "sales_sheets",
    # "sales_front",
    #
    # "ipado2_front",
    # "ipado2_back",
    # "ipado2_db",
    # "ipado2_common",
    #
    "ipado3_back",
    "ipado3_front",
    "ipado3_common",
    "ipado3_agent",

    # "sales_common_front_back",
    # "elastic_source_gen",
    # "spreadsheets",
    # "op_mode",
    # "web_sys_utils",
    # "pool_db",
    # "mingkh_front",
    # "mingkh_data",
    # "soldapp_back",
    # "soldapp_common",
    # "soldapp_front",
    #
    # "asto_back",
    # "asto_front",
    # "asto_common",
    # "asto_db",
    #
    # "mirror_cian_back",
    # "mirror_cian_common",
    # "mirror_yandex_back",
    #
    # "mirror_back",
    # "mirror_bot",
    # "mirror_common",
    # "mirror_db_cian",
    # "mirror_db_yandex",
    # "mirror_scan",
    # "maskt_agent",
    # "maskt_common",
    # "maskt_back",
    # "maskt_db",
    # "maskt_front",
    #
    # "login",
    # "login_export",
    # "google-jwt-verify",
    #
    # "login2_back",
    # "login2_front",
    # "login2_common",
    # "login2_export",
    #
    # "volley_wp",
    # "volley_db",
    # "volley_back",
    # "volley_front",
    # "elenat_bot",
    # "volley_macro",
    #
    # "subsidi_back",
    # "subsidi_front",
    # "subsidi_common",
    # "subsidi_db",
    #
    # "crypto_back",
    # "crypto_front",
    # "crypto_common",
    #
    # "wp_check_password",
    #
    # "support_back",
    # "support_front",
    # "support_agate",
    # "support_common",
    #
    # "card_back",
    #
    # "ners_news_back",
    # "ners_news_db",
    #
    # "dip_db",
    # "dip_back",
    #
    # "aphroteam_back",
]

