#cargo-features = ["edition2021"]

[package]
name = "ipado3_common"
version = "0.22.0"
# 0.22.0 - added support for битые заходы
# 0.21.1 - restored /admin
# 0.21.0 - ipado3 introduced
# 0.20.0 - removed support for couples
# 0.19.0 - fixed issue with cursor missing after refresh, also fixed issue with cursor saving in db
# 0.17.0 - ipado2 introduced
# 0.15.0 - conforms ipado_{front,back,db} 0.15.*
# 0.1.0 - initial
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
compact_extended_value = [ "spreadsheets" ]

[dependencies]
anyhow = "1"
log = "0.4"
chrono = {version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
common_macros2 = { path = "../common_macros2" }
bincode = "1"
strum = { version = "0.24", features = ["derive"] }
op_mode = { path = "../op_mode" }
semver = { version = "1", features = ["serde"]}
flate2 = "1"
login_export = { path = "../login_export" }
spreadsheets = { path = "../spreadsheets", optional = true  }
# fast-math = "0.1"
serde_with = { version = "2", features = [ "macros", "chrono" ] }
serde_yaml = "0.9"

